# kalshi-rust

./: .env.example  .gitignore  API-Parity-Plan.md  CLAUDE.md  PHASE1_TESTS_SUMMARY.md  TDD_COMPLETION_REPORT.md  TESTING_GUIDE.md  cargo.toml  kalshi-api-reference.md  kalshi-getting-started.md  kalshi-websocket-reference.md
kalshi/: Cargo.toml  README.md
kalshi/src/: auth.rs  kalshi_error.rs  lib.rs  market.rs  portfolio.rs
kalshi/src/api_keys/: mod.rs
kalshi/src/collection/: mod.rs
kalshi/src/communications/: mod.rs
kalshi/src/events/: mod.rs
kalshi/src/exchange/: mod.rs
kalshi/src/fcm/: mod.rs
kalshi/src/incentive_programs/: mod.rs
kalshi/src/live_data/: mod.rs
kalshi/src/market/: mod.rs
kalshi/src/milestone/: mod.rs
kalshi/src/portfolio/: mod.rs
kalshi/src/search/: mod.rs
kalshi/src/structured_targets/: mod.rs
kalshi/src/websocket/: channels.rs  connection.rs  messages.rs  mod.rs  subscription.rs
kalshi/tests/: auth_tests.rs  basic_tests.rs  communications_tests.rs  events_tests.rs  exchange_tests.rs  market_tests.rs  mod.rs  order_params_tests.rs  phase1_api_parity_tests.rs  portfolio_tests.rs  websocket_tests.rs
kalshi/tests/common/: mod.rs
sample_bot/: Cargo.toml
sample_bot/src/: main.rs
