[package]
name = "kalshi-rust"
version = "1.0.0"
authors = ["Whrit <beckettwhrit@gmail.com>"]
edition = "2025"
rust-version = "1.91.0"
description = """An async Rust wrapper for the Kalshi trading API with full HTTPS
and WebSocket support for building prediction market trading bots.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/whrit/kalshi-rust"
keywords = ["finance", "trading", "kalshi", "bots", "async"]
readme = "README.md"

[lib]
# We would like to eventually turn this on, but the doctests require some clean-up.
# See https://github.com/whrit/kalshi-rust/issues/7
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
uuid = { version = "1.5.0", features = ["v4", "fast-rng"]}
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"
base64 = "0.21"
serde_json = "1.0"
http = "0.2"
url = "2.4"
serde_urlencoded = "0.7"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
serde_json = "1.0.111"
dotenv = "0.15"
tokio = { version = "1", features = ["full", "test-util"] }
